--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,15 @@ body {
     "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #fcf9ee;
 }
 
 button {
   font-family: "Playfair Display", -apple-system, BlinkMacSystemFont, "Segoe UI";
+}
+
+nav {
+  position: fixed;
+  top: 0;
+  margin-top: 31px;
 }
